--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,14 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CLANG_DEFAULT_CXX_STDLIB libc++)
+set(CLANG_DEFAULT_RTLIB compiler-rt)
+set(CLANG_DEFAULT_LINKER lld)
+
 # --------------COMPILER SPECIFIC---------------- #
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-	set(CMAKE_CXX_FLAGS "-O3 -Wall -flto -stdlib=libc++")
+	set(CMAKE_CXX_FLAGS "-O3 -Wall -flto -stdlib=libc++ -lc++ -fuse-ld=lld")
 
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
 	set(CMAKE_CXX_FLAGS "-O3 -Wall -flto -s")
